# verlox-sdk

./: LICENSE  pyproject.toml
verlox/: __init__.py  capture.py  config.py  config_resolver.py  constants.py  core.py  enums.py  handler.py  init.py  internal_logger.py  middleware.py  processor.py  queue.py  sender.py  task_manager.py  transport.py  utils.py
verlox/integrations/: __init__.py  asyncio.py  logging.py
